# alfred-world-clock

./: .gitignore  README.md  SETUP.md  _release.sh  info.plist  main.py  pyproject.toml  release.sh  requirements.sh  timezones  tmp.py
pytz/: __init__.py
scripts/: build.sh  release.sh
src/: data.py  formatters.py  helpers.py  main.py  meet.py  now.py
tzdata/: build.py  country.csv
