[tool.poetry]
name = "World Clock"
version = "1.2.0"
description = "Check time in multiple timezones."
documentation = "https://github.com/fedecalendino/alfred-world-clock/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-world-clock"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "*"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
black = "latest"
pyinstaller = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
